--- a/package.json
+++ b/package.json
@@ -25,15 +25,16 @@
     "@mui/x-date-pickers": "^6.14.0",
     "autoprefixer": "^10.4.14",
     "dayjs": "^1.11.9",
-    "graphql": "^16.7.1",
+    "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "postcss": "^8.4.27",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-router-dom": "^6.14.2",
+    "readme-md-generator": "^1.0.0",
     "sequelize": "^6.33.0",
     "tailwindcss": "^3.3.3"
   },
